Encore changé nav, input -> a

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <header>
         <a href="index.html"><img src="images/logo.png" alt="logo" title="logo"></a>
         <nav>
-            <form action="histoire.html"><input type="submit" value="Histoire"></form>
-            <form action="deroulement.html.html"><input type="submit" value="Déroulement"></form>
-            <form action="actualite.html"><input type="submit" value="Actualité"></form>
+            <a href="histoire.html">Histoire</a>
+            <a href="deroulement.html">Déroulement</a>
+            <a href="actualite.html">Actualités</a>
         </nav>
     </header>
 
