--- a/actualite.html
+++ b/actualite.html
@@ -12,10 +12,10 @@
     <header>
         <a href="index.html"><img src="images/logo.png" alt="logo" title="logo"></a>
         <nav>
-        
-            <form action="index.html"><input type="submit" value="Accueil"/></form>
-            <form action="histoire.html"><input type="submit" value="Histoire"/></form>
-            <form action="deroulement.html"><input type="submit" value="Déroulement"/></form>
+            <a href="accueil.html">Accueil</a>        
+            <a href="histoire.html">Histoire</a>
+            <a href="deroulement.html">Déroulement</a>
+
         </nav>
         <div class="dropdown">
             <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
