--- a/index.html
+++ b/index.html
@@ -8,7 +8,25 @@
     <meta description="La Fête des Lumières de Lyon est un événement annuel qui illumine la ville avec des installations artistiques et des spectacles lumineux.">
     <title>Fêtes des Lumières de Lyon</title>
 </head>
-<body>
+<body id="container">
+    <script>
+        (function() {
+            document.addEventListener("mousemove", parallax);
+            const elem = document.querySelector("#container");
+
+            function parallax(e) {
+                let _w = window.innerWidth/2;
+                let _h = window.innerHeight/2;
+                let _mouseX = e.clientX;
+                let _mouseY = e.clientY;
+                let _depth1 = `${40 - (_mouseX - _w) * 0.01}% ${40 - (_mouseY - _h) * 0.01}%`;
+                let _depth2 = `${40 - (_mouseX - _w) * 0.02}% ${40 - (_mouseY - _h) * 0.02}%`;
+                let _depth3 = `${40 - (_mouseX - _w) * 0.03}% ${40 - (_mouseY - _h) * 0.03}%`;
+                let x = `${_depth3}, ${_depth2}, ${_depth1}`;
+                elem.style.backgroundPosition = x;
+            }
+        })();
+    </script>
     <header>
         <a href="index.html"><img src="images/logo.png" alt="logo" title="logo"></a>
         <nav>
