--- a/actualite.html
+++ b/actualite.html
@@ -12,7 +12,7 @@
     <header>
         <a href="index.html"><img src="images/logo.png" alt="logo" title="logo"></a>
         <nav>
-            <a href="accueil.html">Accueil</a>        
+            <a href="index.html">Accueil</a>        
             <a href="histoire.html">Histoire</a>
             <a href="deroulement.html">Déroulement</a>
 
