--- a/deroulement.html
+++ b/deroulement.html
@@ -10,7 +10,10 @@
 </head>
 <body>
   <header>
-    <h1 data-key="header_title">Déroulement</h1>
+    <div class="logo-title">
+        <img src="ton_logo.png" alt="Logo" class="logo" />
+        <h1 data-key="header_title">Déroulement</h1>
+    </div>
     <nav>
       <div class="form-buttons">
         <a href="histoire.html" class="nav-button" data-key="menu_history">Histoire</a>
