--- a/index.html
+++ b/index.html
@@ -75,6 +75,13 @@
         <p>
             <a href="https://www.lyon.fr/" target="_blank">Site officiel de la ville de Lyon</a>
         </p>
+
+        <div>
+            <a>Lien utile</a>
+            <a>Lien utile</a>
+            <a>Lien utile</a>
+            <a>Lien utile</a>
+        </div>
     </footer>
 </body>
 </html>
