--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     </header>
 
     <main>
+        <div class="accueil">
+        </div>
+
         <figure>
             <img src="images/actu2.jpg" title="image_bulle" alt="image_bulle"/>
             <figcaption>Place Bellecour</figcaption>
