--- a/deroulement.html
+++ b/deroulement.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="keywords" content="Lyon, Fête des Lumières, 2025, événements, culture, art, lumière" />
   <meta name="description" content="La Fête des Lumières de Lyon est un événement annuel qui illumine la ville avec des installations artistiques et des spectacles lumineux." />
   <title>Déroulement - Fête des Lumières de Lyon</title>
@@ -11,8 +11,8 @@
 <body>
   <header>
     <div class="logo-title">
-        <img src="ton_logo.png" alt="Logo" class="logo" />
-        <h1 data-key="header_title">Déroulement</h1>
+      <img src="images/logo.png" alt="Logo" class="logo" />
+      <h1 data-key="header_title">Déroulement</h1>
     </div>
     <nav>
       <div class="form-buttons">
@@ -32,21 +32,18 @@
   <main>
     <section id="bubbles-container">
       <div class="bubble" onclick="expandBubble(this)" style="top:10%; left:10%;">
-        <img src="image1.jpg" alt="Présentation" />
         <h3 data-key="presentation">Présentation</h3>
         <div class="bubble-content" data-key="presentation_text">
           <p>La Fête des Lumières de Lyon ...</p>
         </div>
       </div>
-      <div class="bubble" onclick="expandBubble(this)" style="top:45%; left:70%;">
-        <img src="image2.jpg" alt="Activités" />
+      <div class="bubble" onclick="expandBubble(this)" style="top:35%; left:70%;">
         <h3 data-key="activities">Activités</h3>
         <div class="bubble-content" data-key="activities_text">
           <p>Durant cette fête absolument sublime, vous pourrez profiter de ...</p>
         </div>
       </div>
-      <div class="bubble" onclick="expandBubble(this)" style="top:80%; left:45%;">
-        <img src="image3.jpg" alt="Prochaine Édition" />
+      <div class="bubble" onclick="expandBubble(this)" style="top:65%; left:45%;">
         <h3 data-key="next_edition">Prochaine Édition</h3>
         <div class="bubble-content" data-key="next_edition_text">
           <p>Nous vous attendons pour la prochaine édition de la Fête des Lumières du ...</p>
@@ -57,9 +54,12 @@
     <section id="gallery">
       <h2 data-key="gallery_title">Galerie Photos</h2>
       <div class="photo-grid">
-        <img src="photo1.jpg" alt="Installation 1" />
-        <img src="photo2.jpg" alt="Installation 2" />
-        <img src="photo3.jpg" alt="Installation 3" />
+        <img src="images/img1.jpg" alt="Installation 1" />
+        <img src="images/img2.jpg" alt="Installation 2" />
+        <img src="images/img3.jpg" alt="Installation 3" />
+        <img src="images/img4.jpg" alt="Installation 4" />
+        <img src="images/img5.jpg" alt="Installation 5" />
+        <img src="images/img6.jpg" alt="Installation 6" />
       </div>
     </section>
   </main>
