--- a/participer.html
+++ b/participer.html
@@ -11,7 +11,7 @@
 <body>
   <header>
     <div class="logo-title">
-        <img src="ton_logo.png" alt="Logo" class="logo" />
+        <img src="images/logo.png" alt="Logo" class="logo" />
         <h1 data-key="header_title">Participer</h1>
     </div>
     <nav>
