--- a/actualite.html
+++ b/actualite.html
@@ -9,30 +9,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header id="header">
-        <script>
+    <header>
 
-                document.addEventListener('DOMContentLoaded', function() {
-                document.addEventListener('scroll', function() {
-                    let y = window.scrollY;
-                    let menuhopin = document.getElementById('header');
-                    if (y > 300) { /* change this value here to make it show up at your desired scroll location. */
-                        menuhopin.classList.add('displayFlexRow');
-                    } else {
-                        menuhopin.classList.remove('displayFlexRow');
-                    }
-                
-                });
-            });
-        </script>
-        <style>
-            #header{
-                position:fixed;
-            }
-            .displayFlexRow{
-                flex-direction: column;
-            }
-        </style>
         <a href="index.html"><img src="images/logo.png" alt="logo" title="logo"></a>
         <nav>
             <a href="index.html">Accueil</a>        
