--- a/actualite.html
+++ b/actualite.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <header>
+
         <a href="index.html"><img src="images/logo.png" alt="logo" title="logo"></a>
         <nav>
             <a href="index.html">Accueil</a>        
@@ -17,21 +18,35 @@
             <a href="deroulement.html">Déroulement</a>
 
         </nav>
-        <div class="dropdown">
-            <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Langue
-            </a>
-          
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Français</a></li>
-              <li><a class="dropdown-item" href="#">Anglais</a></li>
-            </ul>
-          </div>
+
     </header>
     
-    <main>
+    <main class="actus">
         <section>
             <h1>Actualités</h1>
+            <div class="container_carousel">
+                <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="images/actu1.jpg" class="d-block w-100" alt="image_actu1">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/actu2.jpg" class="d-block w-100" alt="image_actu2">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/actu3.jpg" class="d-block w-100" alt="image_actu3">
+                    </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
             <div class="container_grid">
                 <div class="card" style="width: 25rem;">
                     <a href="https://7alyon.com/fete-des-lumieres-2025-lyon-dates-horairex-programmation/"><img src="images/actu1.jpg" class="card-img-top" alt="image_actu1"></a>
@@ -41,7 +56,7 @@
                     </div>
                 </div>
                 <div class="card" style="width: 25rem;">
-                    <a href="actu2.html"><img src="images/actu2.jpg" class="card-img-top" alt="image_actu2"></a>
+                    <a href="https://www.lyonpeople.com/actualites-lyon/fete-des-lumieres-savez-vous-combien-a-coute-la-dechetterie-du-parc-de-la-tete-dor-2-2025-01-23.html"><img src="images/actu2.jpg" class="card-img-top" alt="image_actu2"></a>
                     <div class="card-body">
                         <h5>Fête des Lumières. Combien a coûté la déchetterie du Parc de la Tête d’or ?</h5><hr/>
                     <p class="card-text">La fête des lumières a refermé ses portes sur fond de polémique et de dégout face à la profusion d’œuvres politisées, totalement déconnectées de l’esprit du 8 décembre.
