--- a/histoire.html
+++ b/histoire.html
@@ -15,7 +15,7 @@
         <h1>Histoire de la Fête des Lumières</h1>
         <article>
             <h2>Origines historiques</h2>
-            <p><span>La Fête des Lumières</span> se déroule le 8 décembre par rapport à un pélerinage de Fourvière à Lyon.<br>En effet, en 1168, la première église dédiée à la Vierge est construite à Fourvière. Les guerres de religions (entre les catholiques et les protestants au XVIe siècle) a ravagé cette église.<br>Elle a été reconstruite et a été un lieu de prière en vue de soigner des maladies.<br>Face aux grandes épidémies de peste, un pélerinage a eu lieu le 8 septembre 1643 afin de prier la Vierge Marie et lui demander de protéger la ville de Lyon, proie de la peste.<br></p>
+            <p>La Fête des Lumières se déroule le 8 décembre par rapport à un pélerinage de Fourvière à Lyon.<br>En effet, en 1168, la première église dédiée à la Vierge est construite à Fourvière. Les guerres de religions (entre les catholiques et les protestants au XVIe siècle) a ravagé cette église.<br>Elle a été reconstruite et a été un lieu de prière en vue de soigner des maladies.<br>Face aux grandes épidémies de peste, un pélerinage a eu lieu le 8 septembre 1643 afin de prier la Vierge Marie et lui demander de protéger la ville de Lyon, proie de la peste.<br></p>
             <iframe width="400" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=8%20Pl.%20de%20Fourvi%C3%A8re,%2069005%20Lyon+(Basilique%20Fourvi%C3%A8re)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/collections/personal-trackers/">Personal GPS</a></iframe>       
         </article>
         <article>
