--- a/deroulement.html
+++ b/deroulement.html
@@ -34,19 +34,19 @@
       <div class="bubble" onclick="expandBubble(this)" style="top:10%; left:10%;">
         <h3 data-key="presentation">Présentation</h3>
         <div class="bubble-content" data-key="presentation_text">
-          <p>La Fête des Lumières de Lyon ...</p>
+          <p>La Fête des Lumières de Lyon est une tradition emblématique qui remonte à 1852. Chaque année, autour du 8 décembre, les habitants placent des lumignons (petites bougies) à leurs fenêtres pour rendre hommage à la Vierge Marie. Aujourd'hui, cette célébration a évolué en un événement artistique majeur, attirant des millions de visiteurs venus admirer des installations lumineuses spectaculaires à travers toute la ville.</p>
         </div>
       </div>
-      <div class="bubble" onclick="expandBubble(this)" style="top:35%; left:70%;">
+      <div class="bubble" onclick="expandBubble(this)" style="top:35%; left:80%;">
         <h3 data-key="activities">Activités</h3>
         <div class="bubble-content" data-key="activities_text">
-          <p>Durant cette fête absolument sublime, vous pourrez profiter de ...</p>
+          <p>Durant cette fête absolument sublime, vous pourrez profiter de nombreuses animations : des projections monumentales sur les façades des bâtiments emblématiques comme la Cathédrale Saint-Jean ou la Place des Terreaux, des performances artistiques en plein air, des parcours lumineux dans les parcs, et bien sûr, des stands de spécialités lyonnaises. L'événement est aussi l'occasion de découvrir des œuvres d'art lumière réalisées par des artistes du monde entier.</p>
         </div>
       </div>
       <div class="bubble" onclick="expandBubble(this)" style="top:65%; left:45%;">
         <h3 data-key="next_edition">Prochaine Édition</h3>
         <div class="bubble-content" data-key="next_edition_text">
-          <p>Nous vous attendons pour la prochaine édition de la Fête des Lumières du ...</p>
+          <p>Nous vous attendons pour la prochaine édition de la Fête des Lumières du 5 au 8 décembre 2025. Comme chaque année, la ville sera transformée en un gigantesque théâtre de lumière. De nouveaux parcours interactifs, des installations écologiques et des spectacles inédits seront au programme. Préparez-vous à vivre une expérience magique, entre tradition et innovation.</p>
         </div>
       </div>
     </section>
@@ -76,11 +76,11 @@
         menu_unfolding: "Déroulement",
         menu_news: "Actualité",
         presentation: "Présentation",
-        presentation_text: "La Fête des Lumières de Lyon ...",
+        presentation_text: "La Fête des Lumières de Lyon est une tradition emblématique qui remonte à 1852. Chaque année, autour du 8 décembre, les habitants placent des lumignons (petites bougies) à leurs fenêtres pour rendre hommage à la Vierge Marie. Aujourd'hui, cette célébration a évolué en un événement artistique majeur, attirant des millions de visiteurs venus admirer des installations lumineuses spectaculaires à travers toute la ville.",
         activities: "Activités",
-        activities_text: "Durant cette fête absolument sublime, vous pourrez profiter de ...",
+        activities_text: "Durant cette fête absolument sublime, vous pourrez profiter de nombreuses animations : des projections monumentales sur les façades des bâtiments emblématiques comme la Cathédrale Saint-Jean ou la Place des Terreaux, des performances artistiques en plein air, des parcours lumineux dans les parcs, et bien sûr, des stands de spécialités lyonnaises. L'événement est aussi l'occasion de découvrir des œuvres d'art lumière réalisées par des artistes du monde entier.",
         next_edition: "Prochaine Édition",
-        next_edition_text: "Nous vous attendons pour la prochaine édition de la Fête des Lumières du ... au ...",
+        next_edition_text: "Nous vous attendons pour la prochaine édition de la Fête des Lumières du 5 au 8 décembre 2025. Comme chaque année, la ville sera transformée en un gigantesque théâtre de lumière. De nouveaux parcours interactifs, des installations écologiques et des spectacles inédits seront au programme. Préparez-vous à vivre une expérience magique, entre tradition et innovation.",
         gallery_title: "Galerie Photos",
         footer_text: "© 2025 Fête des Lumières de Lyon"
       },
@@ -90,11 +90,11 @@
         menu_unfolding: "Unfolding",
         menu_news: "News",
         presentation: "Presentation",
-        presentation_text: "The Festival of Lights in Lyon...",
+        presentation_text: "The Festival of Lights in Lyon is a cherished tradition that dates back to 1852. Every year around December 8th, locals place small candles in their windows in tribute to the Virgin Mary. Today, the event has grown into a major artistic celebration, attracting millions of visitors to witness breathtaking light installations across the city.",
         activities: "Activities",
-        activities_text: "During this beautiful festival, you'll be able to enjoy ...",
+        activities_text: "During this stunning festival, you can enjoy a variety of attractions: monumental projections on iconic buildings like Saint-Jean Cathedral or Place des Terreaux, open-air artistic performances, illuminated pathways in city parks, and stalls offering Lyonnaise delicacies. Light artworks from international artists are also a major highlight.",
         next_edition: "Next Edition",
-        next_edition_text: "We look forward to seeing you at the next edition of the Festival of Lights from ... to ...",
+        next_edition_text: "We look forward to seeing you at the next edition of the Festival of Lights from December 5th to 8th, 2025. As always, the city will transform into a grand stage of light. New interactive routes, eco-friendly installations, and original performances will be featured. Get ready for a magical experience combining tradition and innovation.",
         gallery_title: "Photo Gallery",
         footer_text: "© 2025 Festival of Lights in Lyon"
       }
