--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             <a href="histoire.html">Histoire</a>
             <a href="deroulement.html">Déroulement</a>
             <a href="actualite.html">Actualités</a>
+            <a href="participer.html">Participer</a>
         </nav>
     </header>
 
@@ -49,10 +50,13 @@
         <div class="accueil">
         </div>
 
+        <!--
         <figure>
             <img src="images/actu2.jpg" title="image_bulle" alt="image_bulle"/>
             <figcaption>Place Bellecour</figcaption>
         </figure>
+        -->
+        
         <h1>Infos 2025</h1>
         <p>La lumière à Lyon est aujourd'hui une évidence : tout promeneur nocturne remarquera combien elle est devenue une composante essentielle de l'architecture lyonnaise, en révélant ses trésors sans les dénaturer.
 
