--- a/actualite.html
+++ b/actualite.html
@@ -20,10 +20,31 @@
         </nav>
 
     </header>
+    <style>
+    span {
+    display: inline-block;
+    position: relative;
+    animation: marquee 2s infinite;
+    }
+    @keyframes marquee {
+    0% {right: 500px}
+    50% {right: 200px}
+    100% {right: -100px}
+    }
     
+
+    .animated {
+    position:relative;
+    animation: animate 1.5s ;
+    }
+    @keyframes animate{
+    0% {right: 100%}
+    100% {right: 0%}
+    }
+    </style>
     <main class="actus">
         <section>
-            <h1>Actualités</h1>
+            <h1 class="animated">Actualités</h1>
             <div class="container_carousel">
                 <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
@@ -56,7 +77,7 @@
                     </div>
                 </div>
                 <div class="card" style="width: 25rem;">
-                    <a href="https://www.lyonpeople.com/actualites-lyon/fete-des-lumieres-savez-vous-combien-a-coute-la-dechetterie-du-parc-de-la-tete-dor-2-2025-01-23.html"><img src="images/actu2.jpg" class="card-img-top" alt="image_actu2"></a>
+                    <a href="actu2.html"><img src="images/actu2.jpg" class="card-img-top" alt="image_actu2"></a>
                     <div class="card-body">
                         <h5>Fête des Lumières. Combien a coûté la déchetterie du Parc de la Tête d’or ?</h5><hr/>
                     <p class="card-text">La fête des lumières a refermé ses portes sur fond de polémique et de dégout face à la profusion d’œuvres politisées, totalement déconnectées de l’esprit du 8 décembre.
