--- a/actualite.html
+++ b/actualite.html
@@ -20,31 +20,11 @@
         </nav>
 
     </header>
-    <style>
-    span {
-    display: inline-block;
-    position: relative;
-    animation: marquee 2s infinite;
-    }
-    @keyframes marquee {
-    0% {right: 500px}
-    50% {right: 200px}
-    100% {right: -100px}
-    }
-    
 
-    .animated {
-    position:relative;
-    animation: animate 1.5s ;
-    }
-    @keyframes animate{
-    0% {right: 100%}
-    100% {right: 0%}
-    }
     </style>
     <main class="actus">
         <section>
-            <h1 class="animated">Actualités</h1>
+            <h1>Actualités</h1>
             <div class="container_carousel">
                 <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
