--- a/actualite.html
+++ b/actualite.html
@@ -82,5 +82,14 @@
             </div>
         </section>
     </main>
+
+    <footer>
+        <p>
+            <a href="https://www.lyon.fr/" target="_blank">Site officiel de la ville de Lyon</a>
+        </p>
+        <p>
+            &copy; 2025 Fête des Lumières de Lyon. Tous droits réservés.
+        </p>
+    </footer>
 </body>
 </html>
