--- a/deroulement.html
+++ b/deroulement.html
@@ -65,7 +65,12 @@
   </main>
 
   <footer>
-    <p data-key="footer_text">&copy; 2025 Fête des Lumières de Lyon</p>
+      <p>
+          <a href="https://www.lyon.fr/" target="_blank">Site officiel de la ville de Lyon</a>
+      </p>
+      <p>
+          &copy; 2025 Fête des Lumières de Lyon. Tous droits réservés.
+      </p>
   </footer>
 
   <script>
