--- a/index.html
+++ b/index.html
@@ -111,17 +111,12 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Fête des Lumières de Lyon. Tous droits réservés.</p>
         <p>
             <a href="https://www.lyon.fr/" target="_blank">Site officiel de la ville de Lyon</a>
         </p>
-
-        <div>
-            <a>Lien utile</a>
-            <a>Lien utile</a>
-            <a>Lien utile</a>
-            <a>Lien utile</a>
-        </div>
+        <p>
+            &copy; 2025 Fête des Lumières de Lyon. Tous droits réservés.
+        </p>
     </footer>
 </body>
 </html>
