--- a/histoire.html
+++ b/histoire.html
@@ -36,5 +36,14 @@
         </section>
         
     </main>
+
+    <footer>
+        <p>
+            <a href="https://www.lyon.fr/" target="_blank">Site officiel de la ville de Lyon</a>
+        </p>
+        <p>
+            &copy; 2025 Fête des Lumières de Lyon. Tous droits réservés.
+        </p>
+    </footer>
 </body>
 </html>
