Ajout header histoire

--- a/histoire.html
+++ b/histoire.html
@@ -11,6 +11,17 @@
 </head>
 
 <body>
+    <header>
+
+        <a href="index.html"><img src="images/logo.png" alt="logo" title="logo"></a>
+        <nav>
+            <a href="index.html">Accueil</a>        
+            <a href="histoire.html">Histoire</a>
+            <a href="deroulement.html">Déroulement</a>
+
+        </nav>
+
+    </header>
     <main class="main_histoire">
         <section class="histoire">
             <h1>Histoire de la Fête des Lumières</h1>
