--- a/deroulement.html
+++ b/deroulement.html
@@ -10,24 +10,16 @@
 </head>
 <body>
   <header>
-    <div class="logo-title">
-      <img src="images/logo.png" alt="Logo" class="logo" />
-      <h1 data-key="header_title">Déroulement</h1>
-    </div>
+
+    <a href="index.html"><img src="images/logo.png" alt="logo" title="logo"></a>
     <nav>
-      <div class="form-buttons">
-        <a href="histoire.html" class="nav-button" data-key="menu_history">Histoire</a>
-        <a href="deroulement.html" class="nav-button" data-key="menu_unfolding">Déroulement</a>
-        <a href="actualite.html" class="nav-button" data-key="menu_news">Actualités</a>
-      </div>
+        <a href="index.html">Accueil</a>        
+        <a href="histoire.html">Histoire</a>
+        <a href="actualite.html">Actualité</a>
+
     </nav>
-    <div style="position:absolute; top:20px; right:20px;">
-      <select id="language-switcher" onchange="switchLanguage()">
-        <option value="fr">Français</option>
-        <option value="en">English</option>
-      </select>
-    </div>
-  </header>
+
+</header>
 
   <main>
     <section id="bubbles-container">
