--- a/histoire.html
+++ b/histoire.html
@@ -16,7 +16,7 @@
         <a href="index.html"><img src="images/logo.png" alt="logo" title="logo"></a>
         <nav>
             <a href="index.html">Accueil</a>        
-            <a href="histoire.html">Histoire</a>
+            <a href="actualite.html">Actualités</a>
             <a href="deroulement.html">Déroulement</a>
 
         </nav>
