--- a/participer.html
+++ b/participer.html
@@ -9,25 +9,16 @@
   <link rel="stylesheet" href="styleLilian.css" />
 </head>
 <body>
-  <header>
-    <div class="logo-title">
-        <img src="images/logo.png" alt="Logo" class="logo" />
-        <h1 data-key="header_title">Participer</h1>
-    </div>
-    <nav>
-      <div class="form-buttons">
-        <a href="histoire.html" class="nav-button" data-key="menu_history">Histoire</a>
-        <a href="deroulement.html" class="nav-button" data-key="menu_unfolding">Déroulement</a>
-        <a href="actualite.html" class="nav-button" data-key="menu_news">Actualités</a>
-      </div>
-    </nav>
-    <div style="position:absolute; top:20px; right:20px;">
-      <select id="language-switcher" onchange="switchLanguage()">
-        <option value="fr">Français</option>
-        <option value="en">English</option>
-      </select>
-    </div>
-  </header>
+<header> 
+  <a href="index.html"><img src="images/logo.png" alt="logo" title="logo"></a>
+  <nav>
+      <a href="index.html">Accueil</a>        
+      <a href="actualite.html">Actualités</a>
+      <a href="deroulement.html">Déroulement</a>
+
+  </nav>
+
+</header>
 
   <main>
     <section id="infos-participation">
