--- a/deroulement.html
+++ b/deroulement.html
@@ -10,16 +10,22 @@
 </head>
 <body>
   <header>
-
     <a href="index.html"><img src="images/logo.png" alt="logo" title="logo"></a>
     <nav>
+        <a href="index.html">Accueil</a>
         <a href="index.html">Accueil</a>        
-        <a href="histoire.html">Histoire</a>
-        <a href="actualite.html">Actualité</a>
-
+        <a href="actualite.html">Actualités</a>
+        
+  
+        <div style="position:absolute; top:20px; right:10%;">
+          <select id="language-switcher" onchange="switchLanguage()">
+            <option value="fr">Français</option>
+            <option value="en">English</option>
+          </select>
+        </div>
     </nav>
 
-</header>
+  </header>
 
   <main>
     <section id="bubbles-container">
