--- a/deroulement.html
+++ b/deroulement.html
@@ -12,9 +12,9 @@
   <header>
     <a href="index.html"><img src="images/logo.png" alt="logo" title="logo"></a>
     <nav>
-        <a href="index.html">Accueil</a>
-        <a href="index.html">Accueil</a>        
-        <a href="actualite.html">Actualités</a>
+        <a href="histoire.html" class="nav-button" data-key="menu_history">Histoire</a>
+        <a href="index.html" class="nav-button" data-key="menu_index">Accueil</a>
+        <a href="actualite.html" class="nav-button" data-key="menu_news">Actualités</a>
         
   
         <div style="position:absolute; top:20px; right:10%;">
@@ -76,7 +76,7 @@
       fr: {
         header_title: "Déroulement",
         menu_history: "Histoire",
-        menu_unfolding: "Déroulement",
+        menu_index: "Accueil",
         menu_news: "Actualité",
         presentation: "Présentation",
         presentation_text: "La Fête des Lumières de Lyon est une tradition emblématique qui remonte à 1852. Chaque année, autour du 8 décembre, les habitants placent des lumignons (petites bougies) à leurs fenêtres pour rendre hommage à la Vierge Marie. Aujourd'hui, cette célébration a évolué en un événement artistique majeur, attirant des millions de visiteurs venus admirer des installations lumineuses spectaculaires à travers toute la ville.",
@@ -90,7 +90,7 @@
       en: {
         header_title: "Program",
         menu_history: "History",
-        menu_unfolding: "Unfolding",
+        menu_index: "home",
         menu_news: "News",
         presentation: "Presentation",
         presentation_text: "The Festival of Lights in Lyon is a cherished tradition that dates back to 1852. Every year around December 8th, locals place small candles in their windows in tribute to the Virgin Mary. Today, the event has grown into a major artistic celebration, attracting millions of visitors to witness breathtaking light installations across the city.",
