--- a/participer.html
+++ b/participer.html
@@ -13,10 +13,10 @@
   <a href="index.html"><img src="images/logo.png" alt="logo" title="logo"></a>
   <nav>
 
-        <a href="deroulement.html" class="nav-button" data-key="menu_unfolding">Déroulement</a>
-        <a href="histoire.html" class="nav-button" data-key="menu_history">Histoire</a>
-        <a href="index.html" class="nav-button" data-key="menu_index">Accueil</a>
-        <a href="actualite.html" class="nav-button" data-key="menu_news">Actualités</a>
+        <a href="deroulement.html" data-key="menu_unfolding">Déroulement</a>
+        <a href="histoire.html" data-key="menu_history">Histoire</a>
+        <a href="index.html" data-key="menu_index">Accueil</a>
+        <a href="actualite.html" data-key="menu_news">Actualités</a>
 
   </nav>
   <div style="position:absolute; top:20px; right:10%;">
