correction mineure actus

--- a/actualite.html
+++ b/actualite.html
@@ -75,7 +75,7 @@
                 <div class="card" style="width: 25rem;">
                     <a href="https://actu.fr/auvergne-rhone-alpes/lyon_69123/lyon-la-fete-des-lumieres-2025-prend-un-revers-de-la-metropole-qui-coupe-le-robinet_62376138.html"><img src="images/actu4.jpg" class="card-img-top" alt="image_actu4"></a>
                     <div class="card-body">
-                        <h5><strong>Lyon. La Fête des Lumières 2025 prend un revers, la Métropole lui coupe le robinet</strong></h5><hr/>
+                        <h5>Lyon. La Fête des Lumières 2025 prend un revers, la Métropole lui coupe le robinet</h5><hr/>
                     <p class="card-text">La Fête des Lumières 2025 paie le prix des coupes budgétaires de la Métropole de Lyon dans le secteur de la culture. La subvention de 80 000 euros, accordée en 2024, est supprimée.</p>
                     </div>
                 </div>
